@@ -1,5 +1,7 @@
 2020-07-23  Allen D. Ball  <ball@hcf.dev>
 
+	* Re-factored SSDPMessage hierarchy.
+
 	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
 	Added DatagramSocket parameter to Listener methods.
 
